[gd_scene load_steps=8 format=2]

[ext_resource path="res://res/exported/fonts/GajrajOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://res/exported/sprites/person.png" type="Texture" id=2]
[ext_resource path="res://Slot.gd" type="Script" id=3]
[ext_resource path="res://res/exported/sprites/slot.png" type="Texture" id=4]
[ext_resource path="res://res/exported/sprites/inventory.png" type="Texture" id=5]
[ext_resource path="res://ArmourSystem.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="ArmourSystem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.486275 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1592.0
margin_bottom = -644.0
texture = ExtResource( 5 )
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 119.0
margin_top = 1.0
margin_right = 328.0
margin_bottom = 477.0
texture = ExtResource( 2 )
expand = true

[node name="VestBut" type="Button" parent="."]
margin_left = 23.0
margin_top = 176.0
margin_right = 125.0
margin_bottom = 272.0
focus_mode = 0
mouse_filter = 1
enabled_focus_mode = 0
icon = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Title" type="Label" parent="VestBut"]
anchor_left = 0.252
anchor_right = 0.437
margin_left = -5.704
margin_top = 92.0
margin_right = 193.296
margin_bottom = 164.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "Vest"

[node name="TextureRect" type="TextureRect" parent="VestBut"]
margin_right = 104.0
margin_bottom = 96.0
expand = true

[node name="Label" type="Label" parent="VestBut"]
margin_right = 40.0
margin_bottom = 14.0

[node name="HelmetBut" type="Button" parent="."]
margin_left = 22.0
margin_top = 30.0
margin_right = 124.0
margin_bottom = 126.0
focus_mode = 0
mouse_filter = 1
enabled_focus_mode = 0
icon = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Title" type="Label" parent="HelmetBut"]
anchor_left = 0.252
anchor_right = 0.437
margin_left = -20.704
margin_top = 95.0
margin_right = 273.426
margin_bottom = 167.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "Helmet"

[node name="TextureRect" type="TextureRect" parent="HelmetBut"]
margin_right = 104.0
margin_bottom = 99.0
expand = true

[node name="Label" type="Label" parent="HelmetBut"]
margin_right = 40.0
margin_bottom = 14.0

[node name="HoldingItem" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="VestBut" to="." method="_on_VestBut_pressed"]
[connection signal="pressed" from="HelmetBut" to="." method="_on_HelmetBut_pressed"]
